[Global] Footer: Fixed alignment issues

--- a/resources/css/sass/components/global/_components.theme.global.footer.scss
+++ b/resources/css/sass/components/global/_components.theme.global.footer.scss
@@ -113,6 +113,7 @@
 
 			.c-footer__contact__item-title {
 				display: block;
+				@include rempx(margin, -5px 0 0);
 			}
 
 
